# RubiksCubeSolver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  IDAstarSolver.h  IDFSSolver.h  Makefile  RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube1dArray.h  RubiksCube3dArray.cpp  RubiksCube3dArray.h  main.cpp
DataBases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
